Bug 326059 - Calculator does not support letters anymore (e.g. 1e10, ln(10))
Summary: Calculator does not support letters anymore (e.g. 1e10, ln(10))
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: calculator (other bugs)
Version First Reported In: 4.11.2
Platform: Kubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-15 17:13 UTC by Gauss
Modified: 2015-08-31 06:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gauss 2013-10-15 17:13:39 UTC
Simple bug:
until a few days (maybe weeks) ago you could enter operations using letters like exponential coefficients or logarithms in the KRunner calculator and it calculated a result,
e.g. 3*1e5= 3e5 or ln(10)=2,3025..
Now it only accepts numeric input and some standard operators (+-*/()%! )

Reproducible: Always

Steps to Reproduce:
1. Type ln(10)

Actual Results:  
Nothing

Expected Results:  
ln(10)=2,3025..
Comment 1 laochailan 2013-10-22 09:53:20 UTC
I can confirm this.
Comment 2 dector 2013-10-29 06:13:54 UTC
I confirm this. I'm using kubuntu 13.10, kde-workspace-bin version 4:4.11.2-0ubuntu1.
Comment 3 Christoph Feck 2013-10-30 00:27:18 UTC
https://git.reviewboard.kde.org/r/113504/
Comment 4 Christoph Feck 2013-10-30 09:33:45 UTC
Git commit ceb3114fc6f7db0c5571e1d7c4e1c2a8a8bf3dd0 by Christoph Feck.
Committed on 30/10/2013 at 09:29.
Pushed by cfeck into branch 'KDE/4.11'.

Fix krunner calculator letter check

To make it work, you have to start or end the calculator
input with a '=' symbol again. For inputs not containing
letters, you can still omit it.
FIXED-IN: 4.11.3
REVIEW: 113504

M  +1    -3    plasma/generic/runners/calculator/calculatorrunner.cpp

http://commits.kde.org/kde-workspace/ceb3114fc6f7db0c5571e1d7c4e1c2a8a8bf3dd0
Comment 5 Kalegley 2015-08-31 06:15:24 UTC
Thanks to share informative post !!
[https://bugs.kde.org/show_bug.cgi?id=326059 Bugs.kde.org]