Fix krunner calculator letter check

To make it work, you have to start or end the calculator
input with a '=' symbol again. For inputs not containing
letters, you can still omit it.

BUG: 326059
FIXED-IN: 4.11.3
REVIEW: 113504